Changes to be committed: 	modified:   .env 	modified:   src/config/database.js

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5001
-DATABASE='truthordare'
-DB_USERNAME='denny'
-DB_PASSWORD='deni123'
-DB_HOST='localhost'
+MYSQLDATABASE='truthordare'
+MYSQLUSERNAME='denny'
+MYSQLPASSWORD='deni123'
+MYSQLHOST='localhost'
