Changes to be committed: 	modified:   .env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5001
-MYSQLDATABASE='truthordare'
-MYSQLUSERNAME='denny'
-MYSQLPASSWORD='deni123'
-MYSQLHOST='localhost'
+MYSQLDATABASE='railway'
+MYSQLUSERNAME='root'
+MYSQLPASSWORD='3VrnQy9DG9ENmaEX0jmm'
+MYSQLHOST='containers-us-west-197.railway.app'
