Changes to be committed: 	modified:   .env 	modified:   src/config/database.js

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MYSQLDATABASE='railway'
 MYSQLUSERNAME='root'
 MYSQLPASSWORD='3VrnQy9DG9ENmaEX0jmm'
 MYSQLHOST='containers-us-west-197.railway.app'
+MYSQLPORT= 7179
