Changes to be committed: 	modified:   .env 	modified:   src/config/database.js 	modified:   src/index.js

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT=5001
-MYSQLDATABASE='railway'
-MYSQLUSERNAME='root'
-MYSQLPASSWORD='3VrnQy9DG9ENmaEX0jmm'
-MYSQLHOST='containers-us-west-197.railway.app'
-MYSQLPORT= 7179
+PORT = 5001
+DB_NAME = truthordare
+DB_USER = denny
+DB_PASS = deni123
+DB_HOST = localhost
+DB_PORT = 4321
